finished ex.2 and ex.3

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise XP: DOM Events</title>
+
+    <style>  
+        body{padding-top:30px;} 
+        label,input{display:block;}  
+    </style> 
+
 </head>
 <body>
+
+    <h4 style="font: 3em sans-serif;">EXERCISE 1</h4>
     
     <article>
         <h1> Some Facts </h1>
@@ -29,6 +37,23 @@
     </form> 
     <div class="usersAnswer"></div>
 
+
+    <h4 style="font: 3em sans-serif;">EXERCISE 2</h4>
+
+
+    <p id="strongText"><strong>Hello</strong> I hope you are enjoying <strong>this</strong> class. At the
+        <strong>end</strong> you <strong>will</strong> be great Developers!
+        <strong>Enjoy</strong> the <strong>JavaScript </strong> lessons</p>
+
+
+    <h4 style="font: 3em sans-serif;">EXERCISE 3</h4>
+    
+    <p>Input radius value and get the volume of a sphere.</p> 
+    <form  id="MyForm"> 
+        <label for="radius">Radius</label><input type="text" name="radius" id="radius" required> 
+        <label for="volume">Volume</label><input type="text" name="volume" id="volume"> 
+        <input type="submit" value="Calculate" id="calculate">    
+    </form> 
 
     <script src="./main.js"></script>
 </body>
